--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,702 @@
-.App {
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+
+body {
+  margin: 0;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  max-width: 1440px;
+  margin: auto;
+  position: relative;
+  min-height: 100vh;
+}
+
+
+
+                                                                /* BANNER */
+
+
+
+.home__banner  > *:first-child{
+  height: 200px;
+}
+.home__banner h2{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 23%;
+    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 38px;
+ 
+    /* or 68px */
+    
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    color: #FFFFFF;
+}
+.home__banner {
+ 
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-bottom: 60px;
+  margin-top: 30px;
+}
+.testflex {
+  
+  flex : 25%;
+  box-sizing: border-box;
+}
+.banner {
+  border-radius: 10px;
+  position: relative;
+  margin: 20px 0;
+  height: 111px;
+  animation: fadeIn 500ms ease-in-out;
+}
+.banner__img {
+  border-radius: inherit;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.banner__text {
+  position: absolute;
+  top: 0;
+  font-size: 24px;
+  color: #fff;
+  font-weight: 500;
+  margin: 0;
+  padding-left: 16px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+.banner__overlay {
+  background-color: #000;
+  position: absolute;
+  top: 0;
+  border-radius: 10px;
+  height: 100%;
+  width: 100%;
+  opacity: 0.3;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+                                                               /* PRODUCT / MAIN */
+
+
+
+.home__products {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  margin-left: 80px;
+  margin-right: 80px;
+  background-color: #F7F7F7;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 56px;
+  padding-bottom: 20px;
+border-radius: 25px;
+}
+.thumb {
+  
+  width: 100%;
+  height: 255px;
+  position: relative;
+  border-radius: 10px;
+  animation: fadeInUp 600ms ease-in-out;
+  overflow: hidden;
+  
+}
+.thumb__img {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+  border-radius: inherit;
+  transform: scale(1);
+  transition: transform 300ms;
+}
+.thumb__title {
+  position: absolute;
+  bottom: 0;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 15px 20px;
+  color: #fff;
+  box-sizing: inherit;
+}
+.thumb__overlay {
+  position: absolute;
+  top: 0;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+}
+.thumb-banner__overlay{
+  position: absolute;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+}
+.thumb:hover > .thumb__img {
+  transform: scale(1.05);
+}
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.thumb-banner{
+  width: 100%;
+  height: 255px;
+  position: relative;
+  border-radius: 10px;
+  animation: fadeInUp 600ms ease-in-out;
+  overflow: hidden;
+}
+.singleproduct {
+  margin: 0 5%;
+  color: #ff6060;
+}
+.singleproduct__content {
+  margin-top: 20px;
+}
+.singleproduct__title {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+}
+.singleproduct__location {
+  font-size: 14px;
+  font-weight: 500;
+}
+.singleproduct__tags {
+  display: flex;
+  flex-wrap: wrap;
+}
+.singleproduct__rating-and-host {
+  margin-top: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.rating {
+  display: flex;
+  align-items: center;
+}
+.rating__icon {
+  margin-right: 5px;
+}
+.host {
+  display: flex;
+  justify-content: flex-end;
+}
+.host__name {
+  font-size: 12px;
+  font-weight: 500;
+  margin-right: 10px;
+}
+.host__name p {
+  margin: 0;
+  text-align: end;
+}
+.host__picture {
+  border-radius: 50%;
+  height: 32px;
+  width: 32px;
+}
+.tag {
+  background: #ff6060;
+  border-radius: 5px;
+  color: #fff;
+  padding: 3px 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  min-width: 68px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tag__text {
+  margin: 0;
+  font-size: 10px;
+  font-weight: 500;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+                                                                  /* FOOTER */ 
+
+
+
+
+
+.footer {
+ 
+  position: absolute;
+  
+  width: 100%;
+  background: #000;
+  height: 209px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.footer__text {
+  color: #fff;
+  font-weight: 500;
+  font-size: 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+                                                                  /* NAVBAR */ 
+
+
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2%;
+  padding-top: 20px;
+}
+
+.navbar__links {
+  display: flex;
+  width: 27%;
+  justify-content: space-around;
+  font-size: 1.2rem;
+}
+
+.navbar__links--inactive {
+  width: 50%;
+  color: #ff6060;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-decoration: none;
+  font-weight: 500;
+  
+}
+
+.navbar__links--active {
+  width: 50%;
+  color: #ff6060;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-weight: 500;
+  text-decoration: underline;
+}
+
+.navbar {
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 50px;
+}
+.navbar__img{
+  width: 170px;
+}
+
+
+
+                                                                 /* DROPDOWN */ 
+
+
+
+.Dropdown {
+  color: #fff;
+  margin-bottom: 20px;
+}
+.Dropdown:nth-of-type(1) {
+  animation: show-up 600ms 120ms both;
+  transform-origin: center;
+}
+.Dropdown:nth-of-type(2) {
+  animation: show-up 600ms 240ms both;
+  transform-origin: center;
+}
+.Dropdown:nth-of-type(3) {
+  animation: show-up 600ms 360ms both;
+  transform-origin: center;
+}
+.Dropdown:nth-of-type(4) {
+  animation: show-up 600ms 480ms both;
+  transform-origin: center;
+}
+.Dropdown__button {
+  color: #f7f7f7;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  background-color: #ff6060;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 30px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
+.Dropdown__arrow {
+  margin-right: 1rem;
+  pointer-events: none;
+  transform: rotate(90deg);
+  transition: transform 300ms;
+  transform-origin: bottom -25%;
+  translate: -50% -50%;
+}
+.Dropdown__content {
+  color: #ff6060;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  margin-top: -5px;
+  z-index: -1;
+  max-height: 0;
+  transition: max-height 250ms ease-out, padding 300ms ease-out;
+  overflow: hidden;
+  padding-left: 12px;
+}
+.Dropdown__text {
+  margin: 0;
+  font-size: 12px;
+   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+.Dropdown__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 12px;
+}
+.Dropdown__list-element {
+  margin-bottom: 3px;
+}
+.rotate {
+  transform: rotate(270deg);
+}
+.show {
+  max-height: 500px;
+  padding: 24px 12px 12px 12px;
+  transition: max-height 250ms ease-in-out, padding 300ms ease-in-out;
+}
+@keyframes show-up {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
+.title {
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+}
+.title:first-letter {
+  text-transform: capitalize;
+}
+
+
+
+                                                               /* SLIDER */
+
+
+
+
+.slider {
+  position: relative;
+}
+.slider__active-picture {
+  height: 255px;
+  width: 100%;
+  transform: scale(1);
+  transition: transform 300ms;
+}
+.slider__inactive-picture {
+  
+  transform: scale(1.05);
+  transition: transform 300ms;
+}
+.slider__picture {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.slider__previous, .slider__next {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.slider__next {
+  right: 0;
+}
+.slider__next-icon {
+  margin-right: 5px;
+}
+.slider__previous-icon {
+  margin-left: 5px;
+}
+.slider__next-icon, .slider__previous-icon {
+  height: 16px;
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
+}
+.slider__counter {
+  display: none;
+}
+
+
+
+
+                                                               /* RESPONSIVE */
+
+
+
+
+@media only screen and (min-width: 768px) {
+  .Dropdown__arrow {
+    height: 13px;
+  }
+  .Dropdown__button {
+    height: 46px;
+    border-radius: 10px;
+  }
+  
+  .Dropdown__list {
+    font-size: 14px;
+  }
+  .rating__icon {
+    height: 24px;
+  }
+  .host__name {
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .host__picture {
+    height: 48px;
+    width: 48px;
+}
+
+}
+@media only screen and (min-width: 992px) {
+  
+  .slider__picture {
+    border-radius: 25px;
+  }
+  .singleproduct__location {
+    font-size: 18px;
+  }
+  .singleproduct__rating-and-host {
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    margin: 0;
+  }
+  .singleproduct__dropdowns {
+    column-gap: 80px;
+  }
+  .slider__next-icon, .slider__previous-icon {
+    height: 50px;
+  }
+  
+  .slider__active-picture {
+    height: 375px;
+  }
+  .Dropdown__text {
+    font-size: 18px;
+  }
+  .slider__counter {
+    display: block;
+    color: #fff;
+    position: absolute;
+    bottom: 25px;
+    font-weight: 500;
+    left: 50%;
+    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
+  }
+  .tag {
+    padding: 5px 14px;
+    border-radius: 10px;
+  }
+  .tag__text {
+    font-size: 14px;
+  }
+  .tag__text {
+    font-size: 14px;
+  }
+  .singleproduct__content {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+  .singleproduct__title {
+    font-size: 36px;
+  }
+  .rating__icon {
+    height: 30px;
+  }
+  .host__name {
+    font-size: 18px;
+  }
+  .host__picture {
+    height: 64px;
+    width: 64px;
+  }
+  .Dropdown__button {
+    height: 52px;
+  }
+  .Dropdown__arrow {
+    height: 17px;
+  }
+  .Dropdown__list {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 768px){
+  .navbar__links {
+    width: 50%;
+    justify-content: space-around;
+    font-size: 0.9rem;
+  }
+  .navbar {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+  }
+  .testflex {
+  
+    flex : 80%;
+    box-sizing: border-box;
+  }
+  .home__products {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: transparent;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  border-radius: 25px;
+  }
+  .home__banner {
+ 
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    margin-top: 30px;
+  }
+  .home__banner  > *:first-child{
+    height: 100px;
+  }
+  .home__banner h2{
+    position: absolute;
+    left:35%;
+    transform: translateX(-50%);
+    bottom: 23%;
+    margin: 0;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    white-space: break-spaces;
+    color: #FFFFFF;
+  }
+  .navbar__img{
+    width: 140px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .singleproduct__location {
+    margin-top: 0;
+  }
+  .singleproduct__title {
+    font-size: 30px;
+  }
+  .Dropdown__text {
+    font-size: 14px;
+  }
+  .slider__picture {
+    border-radius: 20px;
+  }
+  slider__active-picture {
+    height: 335px;
+  }
+  .slider__picture {
+    border-radius: 20px;
+  }
+  .slider__next-icon, .slider__previous-icon {
+    height: 38px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .slider__active-picture {
+    height: 415px;
+  }
+}
+@media only screen and (min-width: 350px) {
+  
+  .Dropdown__button {
+    height: 38px;
+  }
+  .slider__active-picture {
+    height: 295px;
+  }
+  .slider__picture {
+    border-radius: 15px;
+  }
+  .tag {
+    padding: 4px 12px;
+    border-radius: 7px;
+  }
+  .tag__text {
+    font-size: 12px;
+  }
+  .singleproduct__title {
+    font-size: 24px;
+  }
+  .singleproduct__location {
+    font-size: 16px;
+  }
+  .slider__next-icon, .slider__previous-icon {
+    height: 27px;
+  }
+}
+
+
+
