add css on 404 page and about page

--- a/src/App.css
+++ b/src/App.css
@@ -475,6 +475,54 @@ border-radius: 25px;
 
 
 
+                                                              /*404 / ABOUT*/
+
+
+
+.error {
+  color: #ff6060;
+  height: 570px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.error__content {
+  margin: 0 40px;
+  text-align: center;
+}
+.error__number {
+  font-size: 96px;
+  font-weight: 700;
+  margin: 0;
+}
+.error__text {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  margin-top: 10px;
+}
+.error__link {
+  color: #ff6060;
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 133px;
+}
+.about .Dropdown{
+  margin-left: 109px;
+  margin-right: 109px;
+}
+.about {
+  object-fit: cover;
+  margin-left: 50px;
+  margin-right: 100px;
+}
+
+
+
+
+
+
 
                                                                /* RESPONSIVE */
 
@@ -482,6 +530,19 @@ border-radius: 25px;
 
 
 @media only screen and (min-width: 768px) {
+  
+  .error {
+    height: 725px;
+  }
+  .error__text {
+    font-size: 30px;
+  }
+  .error__link {
+    font-size: 16px;
+  }
+  .error__number {
+    font-size: 224px;
+  }
   .Dropdown__arrow {
     height: 13px;
   }
@@ -510,6 +571,16 @@ border-radius: 25px;
 }
 @media only screen and (min-width: 992px) {
   
+  
+  .error__number {
+    font-size: 288px;
+  }
+  .error__text {
+    font-size: 36px;
+  }
+  .error__link {
+    font-size: 18px;
+  }
   .slider__picture {
     border-radius: 25px;
   }
@@ -671,6 +742,13 @@ border-radius: 25px;
 }
 @media only screen and (min-width: 350px) {
   
+  .error__text {
+    font-size: 24px;
+  }
+  .error__number {
+    font-size: 160px;
+  }
+
   .Dropdown__button {
     height: 38px;
   }
@@ -697,6 +775,4 @@ border-radius: 25px;
     height: 27px;
   }
 }
-
-
 
