--- a/src/App.css
+++ b/src/App.css
@@ -19,20 +19,21 @@ body {
 
 
 .home__banner  > *:first-child{
-  height: 200px;
+  height: 223px;
 }
 .home__banner h2{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 23%;
+    bottom: 17%;
     
     font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 38px;
+font-style: normal;
+font-weight: 450;
+font-size: 48px;
+line-height: 142.6%;
  
-    /* or 68px */
+    
     
     display: flex;
     align-items: flex-end;
@@ -118,7 +119,7 @@ border-radius: 25px;
 .thumb {
   
   width: 100%;
-  height: 255px;
+  height: 340px;
   position: relative;
   border-radius: 10px;
   animation: fadeInUp 600ms ease-in-out;
@@ -421,6 +422,15 @@ border-radius: 25px;
 .title:first-letter {
   text-transform: capitalize;
 }
+.singleproduct__dropdowns{
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 50px;
+}
+.singleproduct__dropdowns .Dropdown {
+  flex-basis: 50%;
+  
+}
 
 
 
@@ -522,7 +532,7 @@ border-radius: 25px;
 }
 .about {
   object-fit: cover;
-  margin-left: 50px;
+  margin-left: 100px;
   margin-right: 100px;
 }
 .about .banner {
@@ -678,6 +688,16 @@ margin-bottom: 150px;
   }
 }
 @media only screen and (max-width: 768px){
+  
+  .singleproduct__dropdowns{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .singleproduct__dropdowns .Dropdown {
+    flex-basis: 100%;
+    
+  }
   .navbar__links {
     width: 50%;
     justify-content: space-around;
