--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,8 @@ border-radius: 25px;
   overflow: hidden;
 }
 .singleproduct {
-  margin: 0 5%;
+  margin-left: 100px;
+  margin-right: 100px;
   color: #ff6060;
 }
 .singleproduct__content {
@@ -189,9 +190,10 @@ border-radius: 25px;
 }
 .singleproduct__title {
   margin: 0;
-  font-size: 18px;
+  font-size: 10rem;
   font-weight: 500;
 }
+
 .singleproduct__location {
   font-size: 14px;
   font-weight: 500;
@@ -243,7 +245,7 @@ border-radius: 25px;
 }
 .tag__text {
   margin: 0;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 500;
 }
 
@@ -283,8 +285,8 @@ border-radius: 25px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 2%;
-  padding-top: 20px;
+  
+  padding-top: 0px;
 }
 
 .navbar__links {
@@ -316,9 +318,10 @@ border-radius: 25px;
 }
 
 .navbar {
+  margin-top: 40px;
   margin-left: 100px;
   margin-right: 100px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 .navbar__img{
   width: 170px;
@@ -431,6 +434,24 @@ border-radius: 25px;
   flex-basis: 50%;
   
 }
+.singleproduct .Dropdown__button{
+  height: 52px;
+}
+.singleproduct .Dropdown img {
+  margin-top: 20px;
+}
+.singleproduct .Dropdown__text{
+  font-size: 18px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.singleproduct .Dropdown p {
+  font-size: 18px;
+  margin-left: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
 
 
 
@@ -441,9 +462,10 @@ border-radius: 25px;
 
 .slider {
   position: relative;
+  height: 415px;
 }
 .slider__active-picture {
-  height: 255px;
+  height: 415px;
   width: 100%;
   transform: scale(1);
   transition: transform 300ms;
@@ -455,7 +477,7 @@ border-radius: 25px;
 }
 .slider__picture {
   width: inherit;
-  height: inherit;
+  height: 415px;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -543,15 +565,16 @@ margin-bottom: 150px;
   margin-left: 20px;
   margin-right: 20px;
 }
-.about .Dropdown img {
-  margin-top: 20px;
-}
 .about p {
   font-size: 24px;
   margin-left: 10px;
   padding-top: 7px;
   padding-bottom: 7px;
 }
+.about .Dropdown img {
+  margin-top: 20px;
+}
+
 
 
 
@@ -804,14 +827,14 @@ margin-bottom: 150px;
     border-radius: 15px;
   }
   .tag {
-    padding: 4px 12px;
-    border-radius: 7px;
+    padding: 5px 12px;
+    border-radius: 10px;
   }
   .tag__text {
-    font-size: 12px;
+    font-size: 14px;
   }
   .singleproduct__title {
-    font-size: 24px;
+    font-size: 36px;
   }
   .singleproduct__location {
     font-size: 16px;
