--- a/src/App.css
+++ b/src/App.css
@@ -587,7 +587,7 @@ margin-bottom: 150px;
 
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 490px) {
   
   .error {
     height: 725px;
@@ -710,8 +710,200 @@ margin-bottom: 150px;
     font-size: 18px;
   }
 }
-@media only screen and (max-width: 768px){
+
+@media only screen and (min-width: 490px) {
+  .home__banner h2{
+    position: absolute;
+    
+    transform: translateX(-50%);
+    bottom: 37%;
+    margin: 0;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    white-space: nowrap;
+    color: #FFFFFF;
+  }
   
+  .testflex {
+  
+    flex : 40%;
+    box-sizing: border-box;
+  }
+  .singleproduct__location {
+    margin-top: 0;
+  }
+  .singleproduct__title {
+    font-size: 30px;
+  }
+  .Dropdown__text {
+    font-size: 14px;
+  }
+  .slider__picture {
+    border-radius: 20px;
+  }
+  slider__active-picture {
+    height: 335px;
+  }
+  .slider__picture {
+    border-radius: 20px;
+  }
+  .slider__next-icon, .slider__previous-icon {
+    height: 38px;
+  }
+}
+@media only screen and (min-width: 800px) {
+  
+  
+  .testflex {
+  
+    flex : 40%;
+    box-sizing: border-box;
+  }
+  .singleproduct__location {
+    margin-top: 0;
+  }
+  .singleproduct__title {
+    font-size: 30px;
+  }
+  .Dropdown__text {
+    font-size: 14px;
+  }
+  .slider__picture {
+    border-radius: 20px;
+  }
+  slider__active-picture {
+    height: 335px;
+  }
+  .slider__picture {
+    border-radius: 20px;
+  }
+  .slider__next-icon, .slider__previous-icon {
+    height: 38px;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .slider__active-picture {
+    height: 415px;
+  }
+  .testflex {
+  
+    flex : 28%;
+    box-sizing: border-box;
+  }
+  .home__banner h2{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 35%;
+    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 450;
+    font-size: 48px;
+    line-height: 142.6%;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    color: #FFFFFF;
+    
+    
+    
+}
+}
+@media only screen and (min-width: 350px) {
+  
+  .error__text {
+    font-size: 24px;
+  }
+  .error__number {
+    font-size: 160px;
+  }
+
+  .Dropdown__button {
+    height: 38px;
+  }
+  .slider__active-picture {
+    height: 295px;
+  }
+  .slider__picture {
+    border-radius: 15px;
+  }
+  .tag {
+    padding: 5px 12px;
+    border-radius: 10px;
+  }
+  .tag__text {
+    font-size: 14px;
+  }
+  .singleproduct__title {
+    font-size: 36px;
+  }
+  .singleproduct__location {
+    font-size: 16px;
+  }
+  .slider__next-icon, .slider__previous-icon {
+    height: 27px;
+  }
+}
+
+
+
+@media only screen and (max-width: 900px) {
+  .home__banner  > *:first-child{
+    height: 150px;
+  }
+  .navbar__links {
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+    font-size: 1rem;
+}
+.navbar__img {
+  width: 140px;
+}
+.thumb {
+  
+  width: 100%;
+  height: 230px;
+  position: relative;
+  border-radius: 10px;
+  animation: fadeInUp 600ms ease-in-out;
+  overflow: hidden;
+  
+}
+.home__products {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  margin-left: 50px;
+  margin-right: 50px;
+  background-color: #F7F7F7;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 33px;
+  padding-bottom: 20px;
+  border-radius: 25px;
+}
+}
+@media only screen and (max-width: 490px){
+  
+  .thumb {
+  
+    width: 100%;
+    height: 255px;
+    position: relative;
+    border-radius: 10px;
+    animation: fadeInUp 600ms ease-in-out;
+    overflow: hidden;
+    
+  }
   .singleproduct__dropdowns{
     display: flex;
     flex-wrap: wrap;
@@ -780,67 +972,3 @@ margin-bottom: 150px;
     width: 140px;
   }
 }
-@media only screen and (min-width: 768px) {
-  .singleproduct__location {
-    margin-top: 0;
-  }
-  .singleproduct__title {
-    font-size: 30px;
-  }
-  .Dropdown__text {
-    font-size: 14px;
-  }
-  .slider__picture {
-    border-radius: 20px;
-  }
-  slider__active-picture {
-    height: 335px;
-  }
-  .slider__picture {
-    border-radius: 20px;
-  }
-  .slider__next-icon, .slider__previous-icon {
-    height: 38px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .slider__active-picture {
-    height: 415px;
-  }
-}
-@media only screen and (min-width: 350px) {
-  
-  .error__text {
-    font-size: 24px;
-  }
-  .error__number {
-    font-size: 160px;
-  }
-
-  .Dropdown__button {
-    height: 38px;
-  }
-  .slider__active-picture {
-    height: 295px;
-  }
-  .slider__picture {
-    border-radius: 15px;
-  }
-  .tag {
-    padding: 5px 12px;
-    border-radius: 10px;
-  }
-  .tag__text {
-    font-size: 14px;
-  }
-  .singleproduct__title {
-    font-size: 36px;
-  }
-  .singleproduct__location {
-    font-size: 16px;
-  }
-  .slider__next-icon, .slider__previous-icon {
-    height: 27px;
-  }
-}
-
