finishing responsive css on singleproduct page

--- a/src/App.css
+++ b/src/App.css
@@ -459,7 +459,12 @@ border-radius: 25px;
 
 
 
-
+.slider__picture {
+  width: inherit;
+  height: 415px;
+  object-fit: cover;
+  border-radius: 10px;
+}
 .slider {
   position: relative;
   height: 415px;
@@ -475,12 +480,7 @@ border-radius: 25px;
   transform: scale(1.05);
   transition: transform 300ms;
 }
-.slider__picture {
-  width: inherit;
-  height: 415px;
-  object-fit: cover;
-  border-radius: 10px;
-}
+
 .slider__previous, .slider__next {
   position: absolute;
   top: 0;
@@ -856,6 +856,12 @@ margin-bottom: 150px;
 
 
 @media only screen and (max-width: 900px) {
+  
+  .singleproduct {
+    margin-left: 60px;
+    margin-right: 60px;
+    color: #ff6060;
+}
   .home__banner  > *:first-child{
     height: 150px;
   }
@@ -893,8 +899,50 @@ margin-bottom: 150px;
 }
 }
 @media only screen and (max-width: 490px){
-  
-  .thumb {
+  .singleproduct .Dropdown__button {
+    height: 30px;
+}
+.singleproduct .Dropdown img {
+  margin-top: 20px;
+  height: 20px;
+}  
+.singleproduct .Dropdown p {
+    font-size: 13px;
+    margin-left: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+  .tag__text {
+    font-size: 10px;
+}
+  .rating__icon {
+    height: 24px;
+    
+}
+  .singleproduct__title {
+    font-size: 18px;
+}
+.singleproduct__location {
+  margin-top: 5px;
+  font-size: 14px;
+}
+  .singleproduct {
+    margin-left: 19px;
+    margin-right: 19px;
+    color: #ff6060;
+}
+.slider__picture {
+  height: 255px;
+}
+.slider {
+  height: 255px;
+}
+.slider__active-picture {
+  height: 255px;
+}
+
+
+.thumb {
   
     width: 100%;
     height: 255px;
@@ -921,7 +969,7 @@ margin-bottom: 150px;
   .navbar {
     margin-left: 20px;
     margin-right: 20px;
-    margin-bottom: 5px;
+    margin-bottom: 30px;
   }
   .testflex {
   
