--- a/src/App.css
+++ b/src/App.css
@@ -856,7 +856,11 @@ margin-bottom: 150px;
 
 
 @media only screen and (max-width: 900px) {
-  
+  .about {
+    
+    margin-left: 20px;
+    margin-right: 20px;
+}
   .singleproduct {
     margin-left: 60px;
     margin-right: 60px;
@@ -899,10 +903,42 @@ margin-bottom: 150px;
 }
 }
 @media only screen and (max-width: 490px){
+ 
+  .show {
+    max-height: 500px;
+    padding: 12px 7px 12px 7px;
+    transition: max-height 250ms ease-in-out, padding 300ms ease-in-out;
+}
+
+  .about .Dropdown__text {
+   
+    font-size: 12px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+  .about {
+    
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.about .Dropdown__button {
+  height: 30px;
+}
+.about p {
+  font-size: 13px;
+  margin-left: 5px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+.about .Dropdown {
+  margin-left: 0;
+  margin-right: 0;
+}
   .singleproduct .Dropdown__button {
     height: 30px;
 }
-.singleproduct .Dropdown img {
+ .Dropdown img {
   margin-top: 20px;
   height: 20px;
 }  
