--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,11 @@ border-radius: 25px;
   font-size: 10rem;
   font-weight: 500;
 }
-
+.testflex {
+  
+  flex : 27%;
+  box-sizing: border-box;
+}
 .singleproduct__location {
   font-size: 14px;
   font-weight: 500;
@@ -507,38 +511,55 @@ border-radius: 25px;
 
 
 
+
+
+
+
+
+
+
+
+
                                                               /*404 / ABOUT*/
 
 
 
-.error {
-  color: #ff6060;
-  height: 570px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+
+
+.about .Dropdown{
+  
+  margin-left: 109px;
+  margin-right: 109px;
 }
-.error__content {
-  margin: 0 40px;
-  text-align: center;
+.about .Dropdown__button{
+  height: 47px;
 }
-.error__number {
-  font-size: 96px;
-  font-weight: 700;
-  margin: 0;
+.banner img{
+  border-radius: 25px;
+  height: 223px;
 }
-.error__text {
-  font-size: 18px;
-  font-weight: 500;
-  margin: 0;
-  margin-top: 10px;
+.about {
+  object-fit: cover;
+  margin-left: 100px;
+  margin-right: 100px;
 }
-.error__link {
-  color: #ff6060;
-  font-size: 14px;
-  font-weight: 500;
-  margin-top: 133px;
+.about .banner {
+margin-bottom: 150px;
+}
+.about .Dropdown__text{
+  font-size: 24px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.about p {
+  font-size: 24px;
+  margin-left: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+.about .Dropdown img {
+  margin-top: 20px;
 }
 .about .Dropdown{
   
@@ -576,286 +597,96 @@ margin-bottom: 150px;
 }
 
 
+.error {
+  color: #ff6060;
+  height: 570px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.error__content {
+  margin: 0 40px;
+  text-align: center;
+}
+.error__number {
+  font-size: 96px;
+  font-weight: 700;
+  margin: 0;
+}
+.error__text {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  margin-top: 10px;
+}
+.error__link {
+  color: #ff6060;
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 133px;
+}
 
 
 
-
-
-
-                                                               /* RESPONSIVE */
-
-
-
-
-@media only screen and (min-width: 490px) {
   
-  .error {
-    height: 725px;
-  }
-  .error__text {
+                                                        /* RESPONSIVE */
+
+
+
+  
+
+
+  .singleproduct__title {
     font-size: 30px;
   }
-  .error__link {
-    font-size: 16px;
-  }
-  .error__number {
-    font-size: 224px;
-  }
-  .Dropdown__arrow {
-    height: 13px;
-  }
-  .Dropdown__button {
-    height: 46px;
-    border-radius: 10px;
-  }
-  
-  .Dropdown__list {
-    font-size: 14px;
-  }
-  .rating__icon {
-    height: 24px;
-  }
-  .host__name {
-    font-size: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .host__picture {
-    height: 48px;
-    width: 48px;
-}
-
-}
-@media only screen and (min-width: 992px) {
-  
-  
-  .error__number {
-    font-size: 288px;
-  }
-  .error__text {
-    font-size: 36px;
-  }
-  .error__link {
+.singleproduct__location {
     font-size: 18px;
   }
-  .slider__picture {
-    border-radius: 25px;
-  }
-  .singleproduct__location {
-    font-size: 18px;
-  }
-  .singleproduct__rating-and-host {
+.singleproduct__rating-and-host {
     flex-direction: column-reverse;
     justify-content: space-around;
     margin: 0;
   }
-  .singleproduct__dropdowns {
+.singleproduct__dropdowns {
     column-gap: 80px;
   }
-  .slider__next-icon, .slider__previous-icon {
-    height: 50px;
-  }
-  
-  .slider__active-picture {
-    height: 375px;
-  }
-  .Dropdown__text {
-    font-size: 18px;
-  }
-  .slider__counter {
-    display: block;
-    color: #fff;
-    position: absolute;
-    bottom: 25px;
-    font-weight: 500;
-    left: 50%;
-    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
-  }
-  .tag {
-    padding: 5px 14px;
-    border-radius: 10px;
-  }
-  .tag__text {
-    font-size: 14px;
-  }
-  .tag__text {
-    font-size: 14px;
-  }
-  .singleproduct__content {
+.singleproduct__content {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
-  }
-  .singleproduct__title {
-    font-size: 36px;
-  }
-  .rating__icon {
-    height: 30px;
-  }
-  .host__name {
-    font-size: 18px;
-  }
-  .host__picture {
-    height: 64px;
-    width: 64px;
-  }
-  .Dropdown__button {
-    height: 52px;
-  }
-  .Dropdown__arrow {
-    height: 17px;
-  }
-  .Dropdown__list {
-    font-size: 18px;
-  }
-}
+  }     
 
-@media only screen and (min-width: 490px) {
-  .home__banner h2{
-    position: absolute;
-    
-    transform: translateX(-50%);
-    bottom: 37%;
-    margin: 0;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    
-    display: flex;
-    align-items: flex-end;
-    flex-wrap: wrap;
-    white-space: nowrap;
-    color: #FFFFFF;
-  }
-  
-  .testflex {
-  
-    flex : 40%;
-    box-sizing: border-box;
-  }
-  .singleproduct__location {
-    margin-top: 0;
-  }
-  .singleproduct__title {
-    font-size: 30px;
-  }
-  .Dropdown__text {
-    font-size: 14px;
-  }
-  .slider__picture {
-    border-radius: 20px;
-  }
-  slider__active-picture {
-    height: 335px;
-  }
-  .slider__picture {
-    border-radius: 20px;
-  }
-  .slider__next-icon, .slider__previous-icon {
-    height: 38px;
-  }
-}
-@media only screen and (min-width: 800px) {
-  
-  
-  .testflex {
-  
-    flex : 40%;
-    box-sizing: border-box;
-  }
-  .singleproduct__location {
-    margin-top: 0;
-  }
-  .singleproduct__title {
-    font-size: 30px;
-  }
-  .Dropdown__text {
-    font-size: 14px;
-  }
-  .slider__picture {
-    border-radius: 20px;
-  }
-  slider__active-picture {
-    height: 335px;
-  }
-  .slider__picture {
-    border-radius: 20px;
-  }
-  .slider__next-icon, .slider__previous-icon {
-    height: 38px;
-  }
-}
-@media only screen and (min-width: 900px) {
-  .slider__active-picture {
-    height: 415px;
-  }
-  .testflex {
-  
-    flex : 28%;
-    box-sizing: border-box;
-  }
-  .home__banner h2{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 35%;
-    
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 450;
-    font-size: 48px;
-    line-height: 142.6%;
-    display: flex;
-    align-items: flex-end;
-    flex-wrap: nowrap;
-    white-space: nowrap;
-    color: #FFFFFF;
-    
-    
-    
-}
-}
-@media only screen and (min-width: 350px) {
-  
-  .error__text {
-    font-size: 24px;
-  }
-  .error__number {
-    font-size: 160px;
-  }
 
-  .Dropdown__button {
-    height: 38px;
-  }
-  .slider__active-picture {
-    height: 295px;
-  }
-  .slider__picture {
-    border-radius: 15px;
-  }
-  .tag {
-    padding: 5px 12px;
-    border-radius: 10px;
-  }
-  .tag__text {
-    font-size: 14px;
-  }
-  .singleproduct__title {
-    font-size: 36px;
-  }
-  .singleproduct__location {
-    font-size: 16px;
-  }
-  .slider__next-icon, .slider__previous-icon {
-    height: 27px;
-  }
-}
+
+
 
 
 
 @media only screen and (max-width: 900px) {
+  .singleproduct__content {
+    display: block;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }   
+  .host {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .host__name {
+    font-size: 12px;
+    font-weight: 500;
+    margin-right: 10px;
+  }
+  .host__name p {
+    margin: 0;
+    text-align: end;
+  }
+  .host__picture {
+    border-radius: 50%;
+    height: 32px;
+    width: 32px;
+  } 
   .about {
     
     margin-left: 20px;
@@ -903,7 +734,34 @@ margin-bottom: 150px;
 }
 }
 @media only screen and (max-width: 490px){
- 
+  .slider__active-picture {
+    height: 415px;
+  }
+  .testflex {
+  
+    flex : 28%;
+    box-sizing: border-box;
+  }
+  .home__banner h2{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 35%;
+    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 450;
+    font-size: 48px;
+    line-height: 142.6%;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    color: #FFFFFF;
+    
+    
+    
+}
   .show {
     max-height: 500px;
     padding: 12px 7px 12px 7px;
